# repowire

./: .gitignore  README.md  knowledge-gaps.md  plan.md  prd.md  pyproject.toml  repowire.yaml  repowire.yaml.example
deploy/: Dockerfile  relay.yaml
repowire/: blackboard.py  bus.py  cli.py  config.py  daemon.py  process.py
repowire/auth/: __init__.py  happy.py
repowire/client/: daemon.py
repowire/config/: models.py
repowire/hooks/: installer.py  stop_handler.py
repowire/mcp/: server.py
repowire/mesh/: __init__.py  peers.py  server.py  state.py
repowire/protocol/: messages.py  peers.py
repowire/relay/: auth.py  server.py
repowire/session/: manager.py  transcript.py
repowire/transport/: __init__.py  base.py  happy.py  happy_encryption.py  opencode.py
repowire/tui/: __init__.py  app.py
tests/: test_auth.py  test_config.py  test_happy_encryption.py  test_peers.py  test_protocol.py  test_relay.py  test_server.py  test_state.py  test_transcript.py
